# deep-risk-model-v2

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.build  Dockerfile.lambda  Makefile  README.md  SAM_README.md  build.rs  build.sh  run_lambda_local.sh  run_tests.sh  samconfig.toml  template.yaml  test_event_16cols.json
.cargo/: config.toml
.github/environments/: dev.yml  prod.yml  staging.yml
.github/workflows/: deploy.yml  jekyll-gh-pages.yml  pages.yml  rust.yml  sam-deploy.yml  static-pages.yml  static-site.yml
benches/: model_benchmarks.rs  transformer_benchmarks.rs
docs/: ACADEMIC.md  ARCHITECTURE.md  BENCHMARKS.md  DeepSeek_Inspired_Improvements.md  GPU_USAGE.md  Gemfile  IMPLEMENTATION_PLAN.md  README.md  SPRINT_BACKLOG.md  TECHNICAL.md  THEORY.md  USE_CASES.md  _config.yml  ci-cd-setup.md  convert_markdown.rb  deployment-guide.md  generate_search_data.rb  index.md  lambda-usage.md  search-data.json
docs/_includes/: footer.html  header.html  sidebar.html
docs/_layouts/: default.html
docs/assets/css/: custom.scss
docs/assets/js/: main.js
docs/docs/: getting-started.md  index.md  memory-optimization.md  quantization.md
docs/examples/: memory-optimization.md  quantization.md
events/: lambda_test_payload.json  test-event.json  test_api.json  test_api_fixed.json  test_api_fixed2.json  test_api_fixed3.json  test_event.json  test_event_direct.json  test_event_lambda.json  test_event_local.json
examples/: api_integration_example.rs  gpu_example.rs  linalg_example.rs  matrix_operations_example.rs  memory_optimization_example.rs  no_blas_example.rs  quantization_example.rs  regime_example.rs  risk_model_demo.rs
scripts/: build.sh  deploy-lambda.sh  deploy.sh  direct-test.sh  invoke-lambda.sh  requirements.txt  run-local.sh  run_lambda_local.sh  start_local_api.sh  test_api.py  test_direct.sh  test_event.json  test_invoke.sh  test_invoke_mac.sh  test_local.sh  test_local_mac.sh  test_model.sh
src/: api.rs  backtest.rs  error.rs  factor_analysis.rs  fallback.rs  gat.rs  gpu.rs  gpu_model.rs  gpu_transformer_risk_model.rs  gru.rs  lambda.rs  lib.rs  linalg.rs  memory_opt.rs  model.rs  quantization.rs  regime.rs  regime_risk_model.rs  server.rs  stress_testing.rs  tft_risk_model.rs  transformer_risk_model.rs  types.rs
src/api/: api.rs  lambda.rs  mod.rs
src/core/: error.rs  mod.rs  random.rs  utils.rs
src/gpu/: gpu_model.rs  mod.rs
src/models/: factor_analysis.rs  mod.rs  transformer_risk_model.rs
src/nn/: gru.rs  mod.rs
src/nn/transformer/: mod.rs
src/optimization/: mod.rs
src/transformer/: attention.rs  layer.rs  mod.rs  model.rs  position.rs  temporal_fusion.rs  utils.rs
tests/: e2e_tests.rs  factor_analysis_tests.rs  integration_tests.rs  mod.rs  stress_testing_integration.rs  test_utils.rs
